concord_macros/tests/v5/dsl/fail/fail_old_limit_every.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client OldRateLimitEveryApi {
        base https "example.com"
        rate_limit app {
            limit 500 every 10 seconds
        }
    }
}

fn main() {}
