concord_macros/tests/v5/dsl/fail/fail_old_limit_every.stderr
error: unexpected token in rate_limit plan; expected `bucket`
 --> tests/v5/dsl/fail/fail_old_limit_every.rs:8:13
  |
8 |             limit 500 every 10 seconds
  |             ^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_old_limit_every.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
